Changes functions and code to english

--- a/javascript-front/Ejemplo8/styles.css
+++ b/javascript-front/Ejemplo8/styles.css
@@ -1,11 +1,11 @@
-.negrita {
+.red {
+    color: #F00;
+}
+
+.bold {
     font-weight: bold;
 }
 
-.cursiva {
+.italic {
     font-style: italic;
-}
-
-.rojo {
-    color: #F00;
 }
