--- a/ajax/Ejercicio1Enunciado/views/index.html
+++ b/ajax/Ejercicio1Enunciado/views/index.html
@@ -4,9 +4,9 @@
 
     <h1>Superheroes</h1>
 
-    {{#superheroes}}
+    {{#superheros}}
     <p>{{name}}</p>
-    {{/superheroes}}
+    {{/superheros}}
 
 </body>
 
