--- a/ajax/Ejercicio1Solucion/views/index.html
+++ b/ajax/Ejercicio1Solucion/views/index.html
@@ -8,10 +8,10 @@
 
     <h1>Superheroes</h1>
 
-    <div id='superheroes'>
-        {{#superheroes}}
+    <div id='superheros'>
+        {{#superheros}}
         <p>{{name}}</p>
-        {{/superheroes}}
+        {{/superheros}}
     </div>
 
     <button onclick='loadMore()'>Load more</button>
