--- a/ajax/Ejemplo3/views/index.html
+++ b/ajax/Ejemplo3/views/index.html
@@ -5,13 +5,11 @@
 </head>
 
 <body>
+    <p>Escribe una frase para transformarla en mayúsculas</p>
+    <input type="text" id="text" placeholder="frase" />
+    <button onclick="applyUppercase()">Transformar</button>
 
-    <h1>Hello {{name}}</h1>
-    <button onclick="generateRandom()">Generate Random & Saved</button>
-
-    <table id="content">
-    </table>
-
+    <div id="content"></div>
 </body>
 
 </html>
